# permutations-project

./: CMakeLists.txt  README.md  checkinput1.cpp  checkinput2.cpp  display_vector.cpp  factorial.cpp  how_many_cycles.cpp  input_and_makegraph_instructions.txt  main.cpp  makegraph.sh  number_of_inversions.cpp  results.tex  run.sh
